--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,6 +7,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <script src="https://kit.fontawesome.com/7077dc84bb.js" crossorigin="anonymous"></script>
     <title>Getaways</title>
+    <link rel="icon" href="https://res.cloudinary.com/ddsopojwd/image/upload/v1691380427/2111320_bnbtux.png">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
